[package]
name = "philiprehberger-json-diff"
version = "0.1.7"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Structural JSON diff with path tracking for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-json-diff"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-json-diff"
keywords = ["json", "diff", "compare", "serde", "patch"]
categories = ["encoding", "data-structures"]

[dependencies]
serde = "1"
serde_json = "1"
